--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,25 @@
 {
   "presets": [
-      "@babel/preset-react"
-  ],
-  "plugins": ["@babel/plugin-syntax-jsx"]
+    "@babel/preset-react",
+    [
+        "@babel/preset-env",
+        {
+            "targets": {
+                "browsers": "last 2 versions"
+            },
+            "modules": false,
+            "loose": false
+        }
+    ]
+],
+"plugins": [
+    "transform-class-properties"
+],
+"env": {
+    "test": {
+        "plugins": [
+            "transform-es2015-modules-commonjs"
+        ]
+    }
+}
 }
